# RM_PRIME_f407_Template_HAL

./: .gitignore  .mxproject  CMakeLists.txt  f407_rm_tmplate_hal.ioc  upload.cfg
CppResource/: CMakeLists.txt  main_cpp.cpp  main_cpp.h
CppResource/BSP/: InterfaceCAN.cpp  InterfaceCAN.h  UART.cpp  UART.h
CppResource/Component/: DeltaPID.cpp  DeltaPID.h  Simple_IIR3.cpp  Simple_IIR3.h
CppResource/Component/AHRS/: AHRS.h  AHRS_middleware.c  AHRS_middleware.h
CppResource/Device/: BMI088.cpp  BMI088.h  BMI088_Reg.h  Buzzer.cpp  Buzzer.h  DBus.cpp  DBus.h  DJiMotorGroup.cpp  DJiMotorGroup.h  DM4310.cpp  DM4310.h  Debug.cpp  Debug.h  INS_Device.cpp  INS_Device.h  InterfaceCAN.cpp  InterfaceCAN.h  RGB_LED.cpp  RGB_LED.h  Referee.cpp  Referee.h  RefereeType.h
CppResource/Tasks/: INS_Task.cpp  MotionControlTask.cpp  TaskList.h  TestTask.cpp
CppResource/Tasks/MotionControlTask/: ChassisControl.cpp  GimbalControl.cpp  MotionControl.h  MotionControlTask.cpp  MotionFSM.cpp
Inc/: main.h  spi.h  stm32f4xx_it.h  tim.h  usart.h
Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_conf.c
cmake/stm32cubemx/: CMakeLists.txt
